--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         </div>
         <div class="shop-items">
             <div class="banner">
-                    <img src="/lol.jpg" alt="">
+                    <img src="./lol.jpg" alt="">
             </div>
             <div class="game-items">
                 <div class="item">
-                        <img src="/gta V.png" alt="">
+                        <img src="./gta V.png" alt="">
                         <div class="item-info">
                             <div>
                                 <p>GTA V</p>
@@ -93,7 +93,7 @@
                         </div>
                 </div>
                 <div class="item">
-                    <img src="/red ded.jpg" alt="">
+                    <img src="./red ded.jpg" alt="">
                     <div class="item-info">
                         <div>
                             <p>RDR2</p>
@@ -103,7 +103,7 @@
                     </div>
             </div>
             <div class="item">
-                <img src="/falllguys.jpg" alt="">
+                <img src="./falllguys.jpg" alt="">
                 <div class="item-info">
                     <div>
                         <p>Fall Guys</p>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/arks.png" alt="">
+                <img src="./arks.png" alt="">
                 <div class="item-info">
                     <div>
                         <p>Fall Guys</p>
@@ -124,7 +124,7 @@
             </div>
             
             <div class="item">
-                <img src="/nba21.jpg" alt="">
+                <img src="./nba21.jpg" alt="">
                 <div class="item-info">
                     <div>
                         <p>Fall Guys</p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="item">
-                <img src="/falllguys.jpg" alt="">
+                <img src="./falllguys.jpg" alt="">
                 <div class="item-info">
                     <div>
                         <p>Fall Guys</p>
